test-suite/tests/roundtrip/invalid/semantic/typecheck/record_var_in_list_combining_expr/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/record_var_in_list_combining_expr/input.essence:2:15:
  |
2 | such that sum(t) = 5
  |               ^
Type error:
	Expected: matrix or set
	Got: record {a : int, b : int}

